# lab-work-rosetta

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  RESEARCH_FINDINGS.md  ROADMAP.md  WORKFLOW.md  auto_resolver.py  downloader.py  enrichment.py  fetch_dailymed.py  fetch_descriptions.py  fetch_umls.py  ingest.py  ingest_loinc.py  pyproject.toml  rosetta_cli.py  schema.py  translate.py
scripts/: README.md
scripts/fetch/: fetch_dailymed.py  fetch_descriptions.py  fetch_umls.py
scripts/setup/: downloader.py  enrichment.py  ingest.py  ingest_loinc.py  schema.py
scripts/tools/: auto_resolver.py  rosetta_cli.py  translate.py
src/rosetta/: __init__.py  cli.py
src/rosetta/api/: __init__.py  app.py  routes.py
src/rosetta/core/: __init__.py  database.py  resolver.py
tests/: __init__.py  test_api.py  test_resolver.py
